--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1,68 +1,178 @@
-$icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
-@import '~bootstrap-sass/assets/stylesheets/bootstrap';
 /*!
  * Bootstrap v4.0.0-beta (https://getbootstrap.com)
  * Copyright 2011-2017 The Bootstrap Authors
  * Copyright 2011-2017 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
-@media print {
-    *,
-    ::after,
-    ::before {
-        text-shadow: none!important;
-        box-shadow: none!important
-    }
-    a,
-    a:visited {
-        text-decoration: underline
-    }
-    abbr[title]::after {
-        content: " (" attr(title) ")"
-    }
-    pre {
-        white-space: pre-wrap!important
-    }
-    blockquote,
-    pre {
-        border: 1px solid #999;
-        page-break-inside: avoid
-    }
-    thead {
-        display: table-header-group
-    }
-    img,
-    tr {
-        page-break-inside: avoid
-    }
-    h2,
-    h3,
-    p {
-        orphans: 3;
-        widows: 3
-    }
-    h2,
-    h3 {
-        page-break-after: avoid
-    }
-    .navbar {
-        display: none
-    }
-    .badge {
-        border: 1px solid #000
-    }
-    .table {
-        border-collapse: collapse!important
-    }
-    .table td,
-    .table th {
-        background-color: #fff!important
-    }
-    .table-bordered td,
-    .table-bordered th {
-        border: 1px solid #ddd!important
-    }
-}
+
+ /*
+  * Globals
+  */
+
+ @media (min-width: 48em) {
+   html {
+     font-size: 18px;
+   }
+ }
+
+ body {
+   font-family: Georgia, "Times New Roman", Times, serif;
+   color: #555;
+ }
+
+ h1, .h1,
+ h2, .h2,
+ h3, .h3,
+ h4, .h4,
+ h5, .h5,
+ h6, .h6 {
+   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+   font-weight: normal;
+   color: #333;
+ }
+
+
+ /*
+  * Override Bootstrap's default container.
+  */
+
+ .container {
+   max-width: 60rem;
+ }
+
+
+ /*
+  * Masthead for nav
+  */
+
+ .blog-masthead {
+   margin-bottom: 3rem;
+   background-color: #428bca;
+   -webkit-box-shadow: inset 0 -.1rem .25rem rgba(0,0,0,.1);
+           box-shadow: inset 0 -.1rem .25rem rgba(0,0,0,.1);
+ }
+
+ /* Nav links */
+ .nav-link {
+   position: relative;
+   padding: 1rem;
+   font-weight: 500;
+   color: #cdddeb;
+ }
+ .nav-link:hover,
+ .nav-link:focus {
+   color: #fff;
+   background-color: transparent;
+ }
+
+ /* Active state gets a caret at the bottom */
+ .nav-link.active {
+   color: #fff;
+ }
+ .nav-link.active:after {
+   position: absolute;
+   bottom: 0;
+   left: 50%;
+   width: 0;
+   height: 0;
+   margin-left: -.3rem;
+   vertical-align: middle;
+   content: "";
+   border-right: .3rem solid transparent;
+   border-bottom: .3rem solid;
+   border-left: .3rem solid transparent;
+ }
+
+
+ /*
+  * Blog name and description
+  */
+
+ .blog-header {
+   padding-bottom: 1.25rem;
+   margin-bottom: 2rem;
+   border-bottom: .05rem solid #eee;
+ }
+ .blog-title {
+   margin-bottom: 0;
+   font-size: 2rem;
+   font-weight: normal;
+ }
+ .blog-description {
+   font-size: 1.1rem;
+   color: #999;
+ }
+
+ @media (min-width: 40em) {
+   .blog-title {
+     font-size: 3.5rem;
+   }
+ }
+
+
+ /*
+  * Main column and sidebar layout
+  */
+
+ /* Sidebar modules for boxing content */
+ .sidebar-module {
+   padding: 1rem;
+   /*margin: 0 -1rem 1rem;*/
+ }
+ .sidebar-module-inset {
+   padding: 1rem;
+   background-color: #f5f5f5;
+   border-radius: .25rem;
+ }
+ .sidebar-module-inset p:last-child,
+ .sidebar-module-inset ul:last-child,
+ .sidebar-module-inset ol:last-child {
+   margin-bottom: 0;
+ }
+
+
+ /* Pagination */
+ .blog-pagination {
+   margin-bottom: 4rem;
+ }
+ .blog-pagination > .btn {
+   border-radius: 2rem;
+ }
+
+
+ /*
+  * Blog posts
+  */
+
+ .blog-post {
+   margin-bottom: 4rem;
+ }
+ .blog-post-title {
+   margin-bottom: .25rem;
+   font-size: 2.5rem;
+ }
+ .blog-post-meta {
+   margin-bottom: 1.25rem;
+   color: #999;
+ }
+
+
+ /*
+  * Footer
+  */
+
+ .blog-footer {
+   padding: 2.5rem 0;
+   color: #999;
+   text-align: center;
+   background-color: #f9f9f9;
+   border-top: .05rem solid #e5e5e5;
+ }
+ .blog-footer p:last-child {
+   margin-bottom: 0;
+ }
+
+
 html {
     box-sizing: border-box;
     font-family: sans-serif;
@@ -80,17 +190,12 @@ html {
 @-ms-viewport {
     width: device-width
 }
-article,
-aside,
-dialog,
-figcaption,
-figure,
+
 footer,
 header,
 hgroup,
-main,
-nav,
-section {
+main
+ {
     display: block
 }
 body {
@@ -102,9 +207,7 @@ body {
     color: #212529;
     background-color: #fff
 }
-[tabindex="-1"]:focus {
-    outline: 0!important
-}
+
 hr {
     box-sizing: content-box;
     height: 0;
@@ -123,19 +226,7 @@ p {
     margin-top: 0;
     margin-bottom: 1rem
 }
-abbr[data-original-title],
-abbr[title] {
-    text-decoration: underline;
-    -webkit-text-decoration: underline dotted;
-    text-decoration: underline dotted;
-    cursor: help;
-    border-bottom: 0
-}
-address {
-    margin-bottom: 1rem;
-    font-style: normal;
-    line-height: inherit
-}
+
 dl,
 ol,
 ul {
@@ -148,136 +239,30 @@ ul ol,
 ul ul {
     margin-bottom: 0
 }
-dt {
-    font-weight: 700
-}
-dd {
-    margin-bottom: .5rem;
-    margin-left: 0
-}
-blockquote {
-    margin: 0 0 1rem
-}
-dfn {
-    font-style: italic
-}
-b,
-strong {
-    font-weight: bolder
-}
-small {
-    font-size: 80%
-}
-sub,
-sup {
-    position: relative;
-    font-size: 75%;
-    line-height: 0;
-    vertical-align: baseline
-}
-sub {
-    bottom: -.25em
-}
-sup {
-    top: -.5em
-}
-a {
-    color: #007bff;
-    text-decoration: none;
-    background-color: transparent;
-    -webkit-text-decoration-skip: objects
-}
+
 a:hover {
     color: #0056b3;
     text-decoration: underline
 }
-a:not([href]):not([tabindex]) {
-    color: inherit;
-    text-decoration: none
-}
-a:not([href]):not([tabindex]):focus,
-a:not([href]):not([tabindex]):hover {
-    color: inherit;
-    text-decoration: none
-}
-a:not([href]):not([tabindex]):focus {
-    outline: 0
-}
-code,
-kbd,
-pre,
-samp {
-    font-family: monospace, monospace;
-    font-size: 1em
-}
-pre {
-    margin-top: 0;
-    margin-bottom: 1rem;
-    overflow: auto
-}
-figure {
-    margin: 0 0 1rem
-}
+
 img {
     vertical-align: middle;
     border-style: none
 }
-svg:not(:root) {
-    overflow: hidden
-}
-[role=button],
-a,
-area,
-button,
-input,
-label,
-select,
-summary,
-textarea {
-    -ms-touch-action: manipulation;
-    touch-action: manipulation
-}
-table {
-    border-collapse: collapse
-}
-caption {
-    padding-top: .75rem;
-    padding-bottom: .75rem;
-    color: #868e96;
-    text-align: left;
-    caption-side: bottom
-}
-th {
-    text-align: left
-}
-label {
-    display: inline-block;
-    margin-bottom: .5rem
-}
-button:focus {
-    outline: 1px dotted;
-    outline: 5px auto -webkit-focus-ring-color
-}
-button,
-input,
-optgroup,
-select,
-textarea {
+
+button {
     margin: 0;
     font-family: inherit;
     font-size: inherit;
     line-height: inherit
 }
-button,
-input {
+button {
     overflow: visible
 }
-button,
-select {
+button {
     text-transform: none
 }
-[type=reset],
-[type=submit],
+
 button,
 html [type=button] {
     -webkit-appearance: button
@@ -7467,171 +7452,5 @@ a.text-dark:hover {
 }
 .invisible {
     visibility: hidden!important
-}
-/*
- * Globals
- */
-
-@media (min-width: 48em) {
-  html {
-    font-size: 18px;
-  }
-}
-
-body {
-  font-family: Georgia, "Times New Roman", Times, serif;
-  color: #555;
-}
-
-h1, .h1,
-h2, .h2,
-h3, .h3,
-h4, .h4,
-h5, .h5,
-h6, .h6 {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: normal;
-  color: #333;
-}
-
-
-/*
- * Override Bootstrap's default container.
- */
-
-.container {
-  max-width: 60rem;
-}
-
-
-/*
- * Masthead for nav
- */
-
-.blog-masthead {
-  margin-bottom: 3rem;
-  background-color: #428bca;
-  -webkit-box-shadow: inset 0 -.1rem .25rem rgba(0,0,0,.1);
-          box-shadow: inset 0 -.1rem .25rem rgba(0,0,0,.1);
-}
-
-/* Nav links */
-.nav-link {
-  position: relative;
-  padding: 1rem;
-  font-weight: 500;
-  color: #cdddeb;
-}
-.nav-link:hover,
-.nav-link:focus {
-  color: #fff;
-  background-color: transparent;
-}
-
-/* Active state gets a caret at the bottom */
-.nav-link.active {
-  color: #fff;
-}
-.nav-link.active:after {
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  width: 0;
-  height: 0;
-  margin-left: -.3rem;
-  vertical-align: middle;
-  content: "";
-  border-right: .3rem solid transparent;
-  border-bottom: .3rem solid;
-  border-left: .3rem solid transparent;
-}
-
-
-/*
- * Blog name and description
- */
-
-.blog-header {
-  padding-bottom: 1.25rem;
-  margin-bottom: 2rem;
-  border-bottom: .05rem solid #eee;
-}
-.blog-title {
-  margin-bottom: 0;
-  font-size: 2rem;
-  font-weight: normal;
-}
-.blog-description {
-  font-size: 1.1rem;
-  color: #999;
-}
-
-@media (min-width: 40em) {
-  .blog-title {
-    font-size: 3.5rem;
-  }
-}
-
-
-/*
- * Main column and sidebar layout
- */
-
-/* Sidebar modules for boxing content */
-.sidebar-module {
-  padding: 1rem;
-  /*margin: 0 -1rem 1rem;*/
-}
-.sidebar-module-inset {
-  padding: 1rem;
-  background-color: #f5f5f5;
-  border-radius: .25rem;
-}
-.sidebar-module-inset p:last-child,
-.sidebar-module-inset ul:last-child,
-.sidebar-module-inset ol:last-child {
-  margin-bottom: 0;
-}
-
-
-/* Pagination */
-.blog-pagination {
-  margin-bottom: 4rem;
-}
-.blog-pagination > .btn {
-  border-radius: 2rem;
-}
-
-
-/*
- * Blog posts
- */
-
-.blog-post {
-  margin-bottom: 4rem;
-}
-.blog-post-title {
-  margin-bottom: .25rem;
-  font-size: 2.5rem;
-}
-.blog-post-meta {
-  margin-bottom: 1.25rem;
-  color: #999;
-}
-
-
-/*
- * Footer
- */
-
-.blog-footer {
-  padding: 2.5rem 0;
-  color: #999;
-  text-align: center;
-  background-color: #f9f9f9;
-  border-top: .05rem solid #e5e5e5;
-}
-.blog-footer p:last-child {
-  margin-bottom: 0;
 }
 /*# sourceMappingURL=bootstrap.min.css.map */
