--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -51,39 +51,6 @@
    -webkit-box-shadow: inset 0 -.1rem .25rem rgba(0,0,0,.1);
            box-shadow: inset 0 -.1rem .25rem rgba(0,0,0,.1);
  }
-
- /* Nav links */
- .nav-link {
-   position: relative;
-   padding: 1rem;
-   font-weight: 500;
-   color: #cdddeb;
- }
- .nav-link:hover,
- .nav-link:focus {
-   color: #fff;
-   background-color: transparent;
- }
-
- /* Active state gets a caret at the bottom */
- .nav-link.active {
-   color: #fff;
- }
- .nav-link.active:after {
-   position: absolute;
-   bottom: 0;
-   left: 50%;
-   width: 0;
-   height: 0;
-   margin-left: -.3rem;
-   vertical-align: middle;
-   content: "";
-   border-right: .3rem solid transparent;
-   border-bottom: .3rem solid;
-   border-left: .3rem solid transparent;
- }
-
-
  /*
   * Blog name and description
   */
@@ -91,16 +58,18 @@
  .blog-header {
    padding-bottom: 1.25rem;
    margin-bottom: 2rem;
-   border-bottom: .05rem solid #eee;
+   border-bottom: .05rem solid #273B09;
+   background-color: #273B09
  }
  .blog-title {
    margin-bottom: 0;
    font-size: 2rem;
    font-weight: normal;
+   color: #58641D
  }
  .blog-description {
    font-size: 1.1rem;
-   color: #999;
+   color: #58641D;
  }
 
  @media (min-width: 40em) {
@@ -117,11 +86,15 @@
  /* Sidebar modules for boxing content */
  .sidebar-module {
    padding: 1rem;
+   color: #A4AF69
    /*margin: 0 -1rem 1rem;*/
  }
+.sidebar-module1 {
+  color: #4C2719
+}
  .sidebar-module-inset {
    padding: 1rem;
-   background-color: #f5f5f5;
+   background-color: #002400;
    border-radius: .25rem;
  }
  .sidebar-module-inset p:last-child,
@@ -165,8 +138,8 @@
    padding: 2.5rem 0;
    color: #999;
    text-align: center;
-   background-color: #f9f9f9;
-   border-top: .05rem solid #e5e5e5;
+   background-color: #58641D;
+   border-top: .05rem solid #58641D;
  }
  .blog-footer p:last-child {
    margin-bottom: 0;
@@ -192,9 +165,7 @@ html {
 }
 
 footer,
-header,
-hgroup,
-main
+header
  {
     display: block
 }
@@ -204,10 +175,12 @@ body {
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
-    color: #212529;
-    background-color: #fff
+    color: #4C2719;
+    background-color: #A4AF69
 }
-
+h1 {
+  color: #3C1518
+}
 hr {
     box-sizing: content-box;
     height: 0;
@@ -239,10 +212,11 @@ ul ol,
 ul ul {
     margin-bottom: 0
 }
-
+a {
+  color: #273B09
+}
 a:hover {
-    color: #0056b3;
-    text-decoration: underline
+    color: #4C2719;
 }
 
 img {
